[gd_scene load_steps=18 format=3 uid="uid://d2g2sm3bnk4tj"]

[ext_resource type="Script" uid="uid://dxmnl7e1a1s5p" path="res://src/scripts/playerscripts/FighterPlayer.gd" id="1_rwx8l"]
[ext_resource type="Script" uid="uid://dgjjb82suvscb" path="res://src/scripts/HealthComponent.gd" id="2_5qbrv"]
[ext_resource type="PackedScene" uid="uid://7yqsmb8rlqdl" path="res://src/scenes/gameplayscenes/Bullet.tscn" id="2_p35ce"]
[ext_resource type="Texture2D" uid="uid://k38ru1yn5as5" path="res://src/assets/FighterCharacter.png" id="3_bv166"]
[ext_resource type="Script" uid="uid://bqsw4sdl65ilw" path="res://src/scripts/HitboxComponent.gd" id="3_p35ce"]
[ext_resource type="Script" uid="uid://b1lk7n5io5uc0" path="res://src/scripts/playerscripts/FighterCamera.gd" id="6_m1mhg"]
[ext_resource type="Script" uid="uid://dgr7cpetyqicg" path="res://src/scripts/playerscripts/HeathTracking.gd" id="7_3leuk"]
[ext_resource type="FontFile" uid="uid://fnqi7h5g1cgb" path="res://src/assets/main menu/TitleFont.ttf" id="8_68g56"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bv166"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ng22"]
radius = 16.0312

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fi1s2"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxwnt"]
bg_color = Color(0.411765, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ohk6"]
bg_color = Color(1, 0.105882, 0, 1)

[sub_resource type="Animation" id="Animation_kedvh"]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6el3"]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gdut3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhfby"]
_data = {
&"FadeIn": SubResource("Animation_kedvh"),
&"FadeOut": SubResource("Animation_l6el3"),
&"RESET": SubResource("Animation_gdut3")
}

[node name="FighterPlayer" type="CharacterBody2D"]
script = ExtResource("1_rwx8l")
bullet = ExtResource("2_p35ce")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("3_bv166")

[node name="PhysicsBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bv166")
debug_color = Color(0.686305, 0.499551, 0.0552614, 0.42)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_5qbrv")
metadata/_custom_type_script = "uid://dgjjb82suvscb"

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("3_p35ce")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://bqsw4sdl65ilw"

[node name="BulletBox" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
shape = SubResource("CircleShape2D_1ng22")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="ShotCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("6_m1mhg")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fi1s2")

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="PlayerHealthUI" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_3leuk")
player_node_path = NodePath("../..")

[node name="HealthBar" type="ProgressBar" parent="PlayerUI/PlayerHealthUI"]
layout_mode = 1
offset_right = 77.0
offset_bottom = 11.0
theme_override_styles/background = SubResource("StyleBoxFlat_lxwnt")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ohk6")
show_percentage = false

[node name="HealthLabel" type="Label" parent="PlayerUI/PlayerHealthUI"]
layout_mode = 1
offset_left = -3.0
offset_top = -15.0
offset_right = 40.0
theme_override_fonts/font = ExtResource("8_68g56")
theme_override_font_sizes/font_size = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerUI/PlayerHealthUI"]
libraries = {
&"": SubResource("AnimationLibrary_uhfby")
}

[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_shot_cooldown_timer_timeout"]
